refactor : Sonalint 리뷰 참고하여 수정